<package>
  <name>rviz_lights</name>
  <version>0.0.0</version>
  <description>
    Rviz plugin for altering lighting
  </description>
  <license>MIT</license>
  <maintainer email="mklingen@andrew.cmu.edu">Matt Klingensmith</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rviz</build_depend>
  <run_depend>rviz</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
